# secure-mini-chat-app

./: CMakeLists.txt  README.md  asym_crypt.c  asym_crypt.h  client.c  definition.h  server.c  symm_crypt.c  symm_crypt.h
